Use Java Platform for Base64 (#696)